# chatoy-core

./: .gitignore  CMakeLists.txt  README.md
include/: jni_Utils.h
include/chatoy/: core.hpp  getuser.hpp  login.hpp  register.hpp  room.hpp  session.hpp  types.hpp  user.hpp  wsconnect.hpp  wsconnection.hpp
src/: CMakeLists.txt  core.cpp  getuser.cpp  jni.cpp  login.cpp  register.cpp  room.cpp  session.cpp  user.cpp  wsconnect.cpp  wsconnection.cpp
tests/: CMakeLists.txt  basic.cpp  createroom.cpp  getroom.cpp  getuser.cpp  joinroom.cpp  login.cpp  register.cpp  room.cpp  roomsme.cpp  session.cpp  testlib.cpp  user.cpp  ws.cpp
